# structtypes/response.go
@@ -1,1 +1,7 @@
 package structtypes
+
+//模糊查询返回
+type Usersearchres struct {
+	ID       int
+	Username string
+}
